--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,8 @@
         "iosfwd": "cpp",
         "atomic": "cpp",
         "text_encoding": "cpp",
-        "new": "cpp"
+        "new": "cpp",
+        "string": "cpp",
+        "istream": "cpp"
     }
 }
